# platform.core.multimedia.avsystem

./: AUTHORS  Makefile.am  avsys-audio-alsa.c  avsys-audio-ascenario.c  avsys-audio-handle.c  avsys-audio-initializer.c  avsys-audio-logical-volume.c  avsys-audio-pactrl.c  avsys-audio-pasimple.c  avsys-audio-path.c  avsys-audio-shm.c  avsys-audio-sync.c  avsys-audio.c  avsys-common.c  avsystem.manifest  configure.ac  project.config
audiotest/: avsys-audio-test.c  avsys-audio-volume-dump.c
debian/: changelog  control  libavsystem-0.install.in  libavsystem-dev.install.in  libavsystem-sdk-dev.install.in  rules
include/: avsys-audio-alsa.h  avsys-audio-ascenario.h  avsys-audio-handle.h  avsys-audio-logical-volume.h  avsys-audio-pactrl.h  avsys-audio-pasimple.h  avsys-audio-path.h  avsys-audio-shm.h  avsys-audio-sync.h  avsys-audio.h  avsys-common.h  avsys-debug.h  avsys-error.h  avsys-types.h  avsystem.h
init/: Makefile.am  snd_init
packaging/: avsystem.changes  avsystem.service  avsystem.spec
pkgconfig-arm/: Makefile.am  avsysaudio.pc.in  avsystem.pc.in  avsystem.pc.in.all
pkgconfig-i386/: Makefile.am  avsysaudio.pc.in
